--- a/2017/v5/mc/datasets.yml
+++ b/2017/v5/mc/datasets.yml
@@ -1,7 +1,8 @@
 # MC Datasets for RunII Legacy
-# Cross sections
+# Cross sections from the database (unless stated otherwise)
 #    https://cms-gen-dev.cern.ch/xsdb
 #    -> search query: DAS=<primary dataset name>
+#
 
 # -----------------------
 QCD_bEnriched_UL2017:
@@ -24,6 +25,9 @@ QCD_bEnriched_UL2017:
 
 
 # -----------------------
+
+# Cross sections for PSWeights production not available yet in the DB
+# May take them from the samples themselves directly
 
 QCD_UL2017:
 
@@ -48,3 +52,28 @@ QCD_UL2017:
 
 
 # --------------------------
+
+QCD_MuEnriched_UL2017:
+
+/QCD_Pt-30to50_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 1362000.0
+/QCD_Pt-50to80_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 376600.0
+/QCD_Pt-80to120_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 88930.0
+/QCD_Pt-120to170_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 21230.0
+/QCD_Pt-170to300_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 7055.0
+/QCD_Pt-300to470_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 619.3
+/QCD_Pt-470to600_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 59.24
+/QCD_Pt-600to800_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 18.21
+/QCD_Pt-800to1000_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 3.275
+/QCD_Pt-1000toInf_MuEnrichedPt5_TuneCP5_13TeV_pythia8/RunIISummer19UL17MiniAODv2-106X_mc2017_realistic_v9-v1/MINIAODSIM:
+      xsection_pb          : 1.078
+
+
