--- a/2018/v5/trigger_info.yml
+++ b/2018/v5/trigger_info.yml
@@ -14,7 +14,9 @@
 #       - hltL1Mu12er2p3Jet40er2p3dRMax0p4DoubleJet40er2p3dEtaMax1p6_l1jet
 #       - hltL1Mu12er2p3Jet40er2p3dRMax0p4DoubleJet40er2p3dEtaMax1p6_l1muon
 
-# N.B. 2: extracted from different menu versions
+# N.B. 2: extracted from different menu versions, there could be duplicates,
+#         which should be harmless, but beware of partial similarities
+#         of paths with the same name
 
 
 #--------------------------------------------------------
